--- a/index.html
+++ b/index.html
@@ -45,6 +45,18 @@
         </div>
     </nav>
 
+    <div class="Container my-3">
+        <h1>Welcome to Magic Notes</h1>
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Add a NOte</h5>
+                <div class="form-group" >
+                    
+                </div>
+            </div>
+        </div>
+    </div>
+
 
 
 </body>
