--- a/index.html
+++ b/index.html
@@ -10,10 +10,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-
-
-
-
 </head>
 
 <body>
@@ -51,7 +47,7 @@
             <div class="card-body">
                 <h5 class="card-title">Add a Note</h5>
                 <div class="form-group">
-                    <textarea class="form-group" placeholder="Leave a comment here" id="Addtxt" rows="3"> 
+                    <textarea class="form-group" placeholder="Leave a comment here" id="Addtxt" rows="3">
                     </textarea>
                 </div>
                 <button class="btn btn-primary" id="Addbtn">Add Notes</button>
@@ -62,8 +58,34 @@
         <hr>
 
     </div>
+    <div id="notes" class="row container-fluid">
+        <div class="my-2 mx-2 card" style="width: 18rem;">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title t.</p>
+                <a href="#" class="btn btn-primary">Delete Notes</a>
+            </div>
+        </div>
 
-    <div id="notes" class="row container-fluid"></div>
+        
+
+
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
